@@ -28,6 +28,10 @@ to fix that.
   When you're done with a desktop or want to get rid of a desktop for
   another reason you can use =desktop-registry-remove-desktop=.
 
+  If you've registered a desktop and you don't like what it made of
+  the name you can use =desktop-registry-rename-desktop= to give it a
+  new name.
+
 ** With org-capture-templates
 
    The =desktop-registry-current-desktop= can be used to insert the
